TaskList.java: Make Stream clearer
The Stream in the listTasks method of TaskList.java is closed early
due to a processing step that relies on the number of filtered
tasks.

Combining that step into the streaming process allows for more
readable code.

Let's refactor this section to improve readability.