@@ -1,7 +1,6 @@
 package carbon.task;
 
 import java.util.ArrayList;
-import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -57,15 +56,20 @@ public class TaskList {
         if (tasks.isEmpty()) {
             return "You don't have any tasks! :)";
         }
-        List<String> results = IntStream.range(0, tasks.size())
+
+        return IntStream.range(0, tasks.size())
                 .filter(i -> tasks.get(i).toString().toLowerCase().contains(filter.toLowerCase()))
                 .mapToObj(i -> (i + 1) + ". " + tasks.get(i))
-                .toList();
-        boolean isPlural = results.size() != 1;
-        return results.isEmpty()
-                ? String.format("You don't have any tasks that contain \"%s\".", filter)
-                : String.format("%d task%s contain%s \"%s\":\n", results.size(), isPlural ? "s" : "",
-                isPlural ? "" : "s", filter) + String.join("\n", results);
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        results -> results.isEmpty()
+                                ? String.format("You don't have any tasks that contain \"%s\".", filter)
+                                : String.format("%d task%s contain%s \"%s\":\n",
+                                results.size(),
+                                results.size() != 1 ? "s" : "",
+                                results.size() == 1 ? "s" : "",
+                                filter) + String.join("\n", results)
+                ));
     }
 
     /**
